# mssql-schema-sync

./: .gitignore  Dockerfile  LICENSE  README.md  mssql_schema_sync_dag.py  pyproject.toml  sync.py
