[project]
name = "mssql-schema-sync"
version = "0.1.0"
description = ""
authors = [
    {name = "emilcube"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyodbc (>=5.3.0,<6.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "python-gitlab (>=7.0.0,<8.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
